crates/check_cli/tests/snapshots/main_commands_check/maximum_diagnostics.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js

for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:2:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:2:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:2:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:2:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:2:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:2:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:3:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:30 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                              ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:42 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                          ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:54 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                      ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:4:66 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    2 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                                                                  ^^^^
    5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:5:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │      ^^^^
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    7 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
check.js:5:18 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
    3 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    4 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  > 5 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
      │                  ^^^^
    6 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
    7 │ for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);for(;true;);
  

```

```block
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 29.
```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 49 errors.
```
