crates/check_cli/tests/snapshots/main_commands_check/no_lint_if_files_are_listed_in_ignore_option.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": { "includes": ["**", "!test1.js"] },
  "linter": { "includes": ["**", "!test2.js"] }
}
```

## `test1.js`

```js

(1 >= -0)

```

## `test2.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
