crates/check_cli/tests/snapshots/main_commands_check/no_lint_if_linter_is_disabled_when_run_apply_check_jsonc.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.jsonc`

```json
{
  // I am a comment
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
