crates/check_cli/tests/snapshots/main_commands_check/no_lint_when_file_is_ignored.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{ "linter": { "includes": ["**", "!test.js"] } }
```

## `test.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
