crates/check_cli/tests/snapshots/main_commands_check/print_json_pretty.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `fix.js`

```js
const a = 4;
console.log(a);

```

# Emitted Messages

```block
The --json option is unstable/experimental and its output might change between patches/minor releases.
```

```block
{
	"summary": {
		"changed": 1,
		"unchanged": 0,
		"matches": 0,
		"errors": 0,
		"warnings": 0,
		"skipped": 0,
		"suggestedFixesSkipped": 0,
		"diagnosticsNotPrinted": 0
	},
	"diagnostics": [],
	"command": "check"
}

```
